<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.federico.velector.Fragment_Inicio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/myred"
        android:id="@+id/bienv"
        android:text="@string/Bienvenido"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="20sp"
        android:paddingLeft="20sp"/>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="190dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/velectorlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:gravity="center"
        android:text="@string/iniciotxt"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/iniciobtn"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/biniciar"
        android:textColor="@color/white"
        android:background="@color/myred" />


</LinearLayout>
