<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.federico.velector.ActivityAjustes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/condiciones"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ppm2"
            android:textColor="@color/myred"
            android:padding="14dp"
            android:textSize="19dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/menos"
                android:textSize="29sp"
                android:textColor="@color/myred"
                android:padding="0dp"
                android:textStyle="bold">

            </Button>

            <EditText
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:textSize="28sp"
                android:textColor="@color/myred"
                android:maxLength="4"
                android:gravity="center_horizontal"
                android:textStyle="bold"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/mas"
                android:textSize="29sp"
                android:textColor="@color/myred"
                android:padding="0dp"
                android:textStyle="bold">

            </Button>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palabrasenpantalla"
            android:textColor="@color/myred"
            android:padding="14dp"
            android:textSize="19dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/menos"
                android:textSize="29sp"
                android:textColor="@color/myred"
                android:padding="0dp"
                android:textStyle="bold">

            </Button>

            <EditText
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:textSize="28sp"
                android:textColor="@color/myred"
                android:maxLength="1"
                android:digits="1234"
                android:gravity="center_horizontal"
                android:textStyle="bold"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/mas"
                android:textSize="29sp"
                android:textColor="@color/myred"
                android:padding="0dp"
                android:textStyle="bold">

            </Button>

        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metronomo"
            android:textColor="@color/myred"
            android:textColorLink="@color/myred"
            android:padding="14dp"
            android:textSize="20dp" />

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/iniciobtn"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/biniciar_ajustes"
            android:textColor="@color/white"
            android:background="@color/myred" >

        </Button>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
