<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.federico.velector.FragmentEstadisticas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/titlestyle"
            android:text="@string/ultimotexto" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/ultimotitulo"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/ultimoautor"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/ppm"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/palabrasleidas"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="El cuervo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="Allan Poe"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="210"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="690"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/titlestyle"
            android:text="@string/ultimasesion" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/textos"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/ppm"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/palabrasleidas"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="270"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="2690"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/titlestyle"
            android:text="@string/total" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/textos"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/ppm"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="@string/palabrasleidas"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="10"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="265"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    style="@style/titlestyle"
                    android:padding="2sp"
                    android:text="5780"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</LinearLayout>
